[package]
name = "manuel"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/vlmlee/manuel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["cargo"] }
tui = "0.19"
crossterm = "0.25"

[dev-dependencies]
anyhow = "1"